# lti1p3platform

./: .gitignore  .pylintrc  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: commit-checks.yml
examples/configs/: platform.json  private.key  public.key
examples/django_platform/: README.md  manage.py
examples/django_platform/django_platform/: README.md  asgi.py  helpers.py  settings.py  urls.py  views.py  wsgi.py
examples/django_platform/django_platform/ags/: models.py  service_connector.py  urls.py  views.py
examples/django_platform/django_platform/ags/migrations/: 0001_initial.py
examples/django_platform/django_platform/nrps/: service_connector.py  urls.py  views.py
lti1p3platform/: ags.py  constants.py  deep_linking.py  error_codes.py  exceptions.py  exceptsions.py  jwt_helper.py  lineitem.py  ltiplatform.py  message_launch.py  nrps.py  oidc_login.py  registration.py  request.py  response.py  result.py  score.py  service_connector.py
lti1p3platform.egg-info/: PKG-INFO  SOURCES.txt
lti1p3platform/framework/django/: message_launch.py  oidc_login.py  request.py  response.py
lti1p3platform/framework/fastapi/: message_launch.py  oidc_login.py  request.py
lti1p3platform/framework/templates/: __init__.py
tests/: platform_config.py  test_advantage_services.py  test_deep_linking.py  test_ltiplatform_coverage.py  test_oidc_error_mapping.py  test_platform_conf.py  test_registration.py
