
[tool.poetry]
name = "lti1p3platform"
version = "0.1.0"
description = "LTI 1.3 Platform implementation"
authors = ["Jun Tu <jun@openlearning.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
